--- a/index2.html
+++ b/index2.html
@@ -4,17 +4,20 @@
 	<title>zerix dot net</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="gradient.js"></script>
-	<!--<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+	<link rel='shortcut icon' type='image/x-icon' href='favicon.ico'/>
+	<!--<script src="gradient.js"></script>
+	<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
 	<link href="./fonts/Invention.woff2" rel="stylesheet"> -->
-	<link rel='stylesheet' type='text/css' href='style.css'>
+	<link rel="preload" href="./fonts/IndustryTGBold.woff2" as="font" type="font/woff2"/>
+	<link rel='stylesheet' type='text/css' href='style2.css'>
 </head>
-<body onload="generate()">
+<body>
+	<nav><hr class="linehr"><a href="font.html"><li>Fonts Are The Best Around</li></a><a href="font.html"><li>Fonts</li></a><a href="font.html"><li>Fonts</li></a><a href="font.html"><li>Fonts</li></a><a href="font.html"><li>Fonts</li></a></nav>
 	<div id="main">
 		<!-- <div id="menu">Possible Menu</div> -->
 		<h2>zerix<dot>.</dot>net</h2>
-		<h3><code>A -- Testing some CSS things -- A</code></h3>
+		<h3>A -- Testing some CSS things -- A</h3>
 		<hr class="linehr">
 		<span>
 			<p>The Flatpak 2.7545 series debuts with a major change, namely simplified installation of the OSTree P2P (Peer-to-peer) support.</p>
@@ -26,17 +29,17 @@
 		</span>
 		<hr class="linehr">
 		<span>
-			<p>Some Interesting Links: <a href="https://9to5linux.com" target="_blank">9to5Linux</a> <pipe>|</pipe> <a href="https://www.distrowatch.com" target="_blank">DistroWatch</a> <pipe>|</pipe> <a href="https://www.css-tricks.com" target="_blank">CSS-Tricks</a> <pipe>|</pipe> <a href="https://gisanddata.maps.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6" target="_blank">Covid World Map</a> <pipe>|</pipe> <a href="https://reddit.com/r/unixporn" target="_blank">/r/unixporn</a> <pipe>|</pipe> <a href="https://www.archlinux.org/" target="_blank">ArchLinux</a> <pipe>|</pipe> <a href="https://www.wallhaven.cc/" target="_blank">WallHaven</a> <pipe>|</pipe> <a href="https://draculatheme.com/" target="_blank">Dracula Theme</a></p>
-			<p>Some Nice Fonts: Ubuntu Font Family, Noto Sans Font Family, IBM Plex Mono Medium, Operator Mono Medium, Monaco Mono, Cascadia Mono</p>
+			<p><category>Some Interesting Links:</category> <a href="https://9to5linux.com" target="_blank">9to5Linux</a> <pipe>|</pipe> <a href="https://www.distrowatch.com" target="_blank">DistroWatch</a> <pipe>|</pipe> <a href="https://www.css-tricks.com" target="_blank">CSS-Tricks</a> <pipe>|</pipe> <a href="https://gisanddata.maps.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6" target="_blank">Covid World Map</a> <pipe>|</pipe> <a href="https://reddit.com/r/unixporn" target="_blank">/r/unixporn</a> <pipe>|</pipe> <a href="https://www.archlinux.org/" target="_blank">ArchLinux</a> <pipe>|</pipe> <a href="https://www.wallhaven.cc/" target="_blank">WallHaven</a> <pipe>|</pipe> <a href="https://draculatheme.com/" target="_blank">Dracula Theme</a></p>
+			<p><category>Some Nice Fonts:</category> Ubuntu Font Family, Noto Sans Font Family, IBM Plex Mono Medium, Operator Mono Medium, Monaco Mono, Cascadia Mono</p>
 			<p><a href="https://www.reuters.com" target="_blank">Reuters</a> and <a href="https://www.merck.com" target="_blank">Merck</a> websites also use very nice looking fonts.  Merck font is called Invention.  Reuters is called Knowledge.</p>
 			<p><a href="operatormonofont.png">Screenshot</a> of Linux VSS Code theme <b><dracula>Dracula</dracula></b> with Operator Monospace Medium Font</p>
 		</span>
 		<hr class="linehr">
 		<!-- <img src="archlinux.png"></img> -->
 		<span>
-			<p align="center">Email Me: <a href="mailto:zerix@zerix.net">zerix@zerix.net</a></p>
+			<p align="center"><category>Email Me:</category> <a href="mailto:zerix@zerix.net">zerix@zerix.net</a></p>
 		</span>
 	</div>
 </body>
-<div id="button" onclick="generate();">Generate Random Gradient</div>
+<!-- <div id="button" onclick="generate();">Generate Random Gradient</div> -->
 </html>
