--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<p>Some Interesting Links: <a href="https://9to5linux.com" target="_blank">9to5Linux</a> <pipe>|</pipe> <a href="https://www.distrowatch.com" target="_blank">DistroWatch</a> <pipe>|</pipe> <a href="https://www.css-tricks.com" target="_blank">CSS-Tricks</a> <pipe>|</pipe> <a href="https://gisanddata.maps.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6" target="_blank">Covid World Map</a> <pipe>|</pipe> <a href="https://reddit.com/r/unixporn" target="_blank">/r/unixporn</a> <pipe>|</pipe> <a href="https://www.archlinux.org/" target="_blank">ArchLinux</a> <pipe>|</pipe> <a href="https://www.wallhaven.cc/" target="_blank">WallHaven</a> <pipe>|</pipe> <a href="https://draculatheme.com/" target="_blank">Dracula Theme</a></p>
 			<p>Some Nice Fonts: Ubuntu Font Family, Noto Sans Font Family, IBM Plex Mono Medium, Operator Mono Medium, Monaco Mono, Cascadia Mono</p>
 			<p><a href="https://www.reuters.com" target="_blank">Reuters</a> and <a href="https://www.merck.com" target="_blank">Merck</a> websites also use very nice looking fonts.  Merck font is called Invention.  Reuters is called Knowledge.</p>
-			<p><a href="operatormonofont.png">Screenshot</a> of Linux VSS Code theme <b><dracula>Dracula</dracula></b> with Operator Monospace Medium Font</p>
+			<p><a href="operatormonofont.png">Screenshot</a> of Linux VSS Code themes <b><dracula>Dracula</dracula></b> with Operator Monospace Medium Font</p>
 		</span>
 		<hr class="linehr">
 		<!-- <img src="archlinux.png"></img> -->
@@ -38,5 +38,5 @@
 		</span>
 	</div>
 </body>
-<div id="button" onclick="generate();">Generate Random Gradient [GHub]</div>
+<div id="button" onclick="generate();">Generate Random Gradient [PAA69]</div>
 </html>
