--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 			<p>Furthermore, it makes libsystemd optional in configure, introduces read-only mounting of journal sockets, and makes the host /lib directory accessible as /run/host/lib if a Flatpak app has file system access.</p>
 			<p>Under the hood, the <a href="https://9to5linux.com/flatpak-1-6-2-released-to-improve-installation-performance" target="_blank">Flatpak</a> code has been simplified and it now uses variant-schema-compiler to generate more efficient code for parsing GVariant files from OSTree, a system for versioning updates of Linux-based operating systems.</p>
 			<p>Flatpak 1.7.1 can be downloaded from the project&#8217;s <a href="https://github.com/flatpak/flatpak/releases" target="_blank">GitHub page</a>, but it isn&#8217;t recommended for production use. Most probably, the Flatpak 1.7 unstable series will be released as stable version 1.8.</p>
-			<p>Meanwhile, the Flatpak 1.6.3 stable release also arrived today with a fix for a regression in the progress calculation for apps using extra-data, bubblewrap 0.4.1, a fix for crash in &#8220;flatpak repair&#8221; that <code>occurred when no remotes were configured, updated OCI authenticator, and updated</code> translations.</p>
+			<p>Meanwhile, the Flatpak 1.6.4 stable release also arrived today with a fix for a regression in the progress calculation for apps using extra-data, bubblewrap 0.4.1, a fix for crash in &#8220;flatpak repair&#8221; that <code>occurred when no remotes were configured, updated OCI authenticator, and updated</code> translations.</p>
 		</span>
 		<hr class="linehr">
 		<span>
 			<p>Some Interesting Links: <a href="https://9to5linux.com" target="_blank">9to5Linux</a> <pipe>|</pipe> <a href="https://www.distrowatch.com" target="_blank">DistroWatch</a> <pipe>|</pipe> <a href="https://www.css-tricks.com" target="_blank">CSS-Tricks</a> <pipe>|</pipe> <a href="https://gisanddata.maps.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6" target="_blank">Covid World Map</a> <pipe>|</pipe> <a href="https://reddit.com/r/unixporn" target="_blank">/r/unixporn</a> <pipe>|</pipe> <a href="https://www.archlinux.org/" target="_blank">ArchLinux</a> <pipe>|</pipe> <a href="https://www.wallhaven.cc/" target="_blank">WallHaven</a> <pipe>|</pipe> <a href="https://draculatheme.com/" target="_blank">Dracula Theme</a></p>
 			<p>Some Nice Fonts: Ubuntu Font Family, Noto Sans Font Family, IBM Plex Mono Medium, Operator Mono Medium, Monaco Mono, Cascadia Mono</p>
 			<p><a href="https://www.reuters.com" target="_blank">Reuters</a> and <a href="https://www.merck.com" target="_blank">Merck</a> websites also use very nice looking fonts.  Merck font is called Invention.  Reuters is called Knowledge.</p>
-			<p><a href="operatormonofont.png">Screenshot</a> of Linux VSS Code themes <b><dracula>Dracula</dracula></b> with Operator Monospace Medium Font</p>
+			<p><a href="operatormonofont.png">Screenshots</a> of Linux VSS Code themes <b><dracula>Dracula</dracula></b> with Operator Monospace Medium Font</p>
 		</span>
 		<hr class="linehr">
 		<!-- <img src="archlinux.png"></img> -->
