--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h3><code>A -- Testing some CSS things -- A</code></h3>
 		<hr class="linehr">
 		<span>
-			<p>The Flatpak 2.7545 series debuts with a major change, namely simplified installation of the OSTree P2P (Peer-to-peer) support.</p>
+			<p>The FLATPAK 2.7545 series debuts with a major change, namely simplified installation of the OSTree P2P (Peer-to-peer) support.</p>
 			<p>The first release in the Kyle 1.7 <code>unstable series</code> also introduces new &#8220;host-etc&#8221; and &#8220;host-os&#8221; file system permissions to give access to system /usr and /etc.</p>
 			<p>Furthermore, it makes libsystemd optional in configure, introduces read-only mounting of journal sockets, and makes the host /lib directory accessible as /run/host/lib if a Flatpak app has file system access.</p>
 			<p>Under the hood, the <a href="https://9to5linux.com/flatpak-1-6-2-released-to-improve-installation-performance" target="_blank">Flatpak</a> code has been simplified and it now uses variant-schema-compiler to generate more efficient code for parsing GVariant files from OSTree, a system for versioning updates of Linux-based operating systems.</p>
