--- a/index.html
+++ b/index.html
@@ -38,5 +38,5 @@
 		</span>
 	</div>
 </body>
-<div id="button" onclick="generate();">Generate Random Gradient [PAA69]</div>
+<div id="button" onclick="generate();">Generate Random Gradient</div>
 </html>
