--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<p>Furthermore, it makes libsystemd optional in configure, introduces read-only mounting of journal sockets, and makes the host /lib directory accessible as /run/host/lib if a Flatpak app has file system access.</p>
 			<p>Under the hood, the <a href="https://9to5linux.com/flatpak-1-6-2-released-to-improve-installation-performance" target="_blank">Flatpak</a> code has been simplified and it now uses variant-schema-compiler to generate more efficient code for parsing GVariant files from OSTree, a system for versioning updates of Linux-based operating systems.</p>
 			<p>Flatpak 1.7.1 can be downloaded from the project&#8217;s <a href="https://github.com/flatpak/flatpak/releases" target="_blank">GitHub page</a>, but it isn&#8217;t recommended for production use. Most probably, the Flatpak 1.7 unstable series will be released as stable version 1.8.</p>
-			<p>Meanwhile, the Flatpak 1.6.4 stable release also arrived today with a fix for a regression in the progress calculation for apps using extra-data, bubblewrap 0.4.1, a fix for crash in &#8220;flatpak repair&#8221; that <code>occurred when no remotes were configured, updated OCI authenticator, and updated</code> translations.</p>
+			<p>Meanwhile, the Flatpak 1.6.4 stable release also arrived today with a fix for a regression in the progress calculation for apps using extra-data, bubblewrap 0.4.1, a fix for crash in &#8220;flatpak repair&#8221; that <code>occurred when no remotes were configured, updated OCI authenticator, and updated</code> translationsssss.</p>
 		</span>
 		<hr class="linehr">
 		<span>
