testing cloudflare speed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div id="main">
 		<!-- <div id="menu">Possible Menu</div> -->
 		<h2>zerix<dot>.</dot>net</h2>
-		<h3><code>A -- Testing some CSS things-testing -- A</code></h3>
+		<h3><code>A -- Testing some CSS things-testing -- B</code></h3>
 		<hr class="linehr">
 		<span>
 			<p>The FLATPAK series debuts with a major change, namely simplified installation of the OSTree P2P (Peer-to-peer) support.</p>
