--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 	<title>zerix dot net</title>
 	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-	<script src="gradient.js"></script>
+	<script async src="gradient.js"></script>
 	<!--<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
 	<link href="./fonts/Invention.woff2" rel="stylesheet"> -->
 	<link rel='stylesheet' type='text/css' href='style.css'>
+	<link rel="icon" href="favicon.ico"/>
 </head>
 <body onload="generate()">
 	<div id="main">
