--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
 	<title>zerix dot net</title>
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"/>
 	<meta charset="UTF-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<meta content="text/html; charset=UTF-8" http-equiv="content-type" />
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1"/> -->
 	<script async src="gradient.js"></script>
 	<!--<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
 	<link href="./fonts/Invention.woff2" rel="stylesheet"> -->
-	<link rel='stylesheet' type='text/css' href='style.css'>
+	<link rel='stylesheet' type='text/css' href='style.css'/>
 	<link rel="icon" href="favicon.ico"/>
 </head>
 <body onload="generate()">
