--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<title>zerix dot net</title>
 	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"/>
 	<meta charset="UTF-8"/>
-	<meta content="text/html; charset=UTF-8" http-equiv="content-type" />
-	<!-- <meta name="viewport" content="width=device-width, initial-scale=1"/> -->
+	<!-- <meta content="text/html; charset=UTF-8" http-equiv="content-type" /> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<script async src="gradient.js"></script>
 	<!--<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
