--- a/index.html
+++ b/index.html
@@ -41,5 +41,5 @@
 		</span>
 	</div>
 </body>
-<div id="button" onclick="generate();">Generate Random Gradient</div>
+<button id="button" onclick="generate()">Generate Random Gradient</button>
 </html>
