--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8"/>
 	<!-- <meta content="text/html; charset=UTF-8" http-equiv="content-type" /> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-	<link rel="stylesheet" type="text/css" fetchpriority="highest" href="style.css"/>
+	<link rel="stylesheet" type="text/css" fetchpriority="high" href="style.css"/>
 	<link rel="icon" href="favicon.ico"/>
 	<script type="text/javascript" async="true" src="gradient.js"></script>
 	<!--<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
