--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<meta charset="UTF-8"/>
 	<!-- <meta content="text/html; charset=UTF-8" http-equiv="content-type" /> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<link rel="dns-prefetch" href="https://www.zerix.net/"/>
+	<link rel="preload" href="style.css" as="style"/>
+	<link rel="preload" href="/fonts/Invention.woff2" as="font" type="font/woff2" crossorigin="anonymous"/>
 	<link rel="stylesheet" type="text/css" fetchpriority="high" href="style.css"/>
 	<link rel="icon" href="favicon.ico"/>
 	<script type="text/javascript" async="true" src="gradient.js"></script>
