--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	<!-- <meta content="text/html; charset=UTF-8" http-equiv="content-type" /> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<link rel="dns-prefetch" href="https://www.zerix.net/"/>
-	<link rel="preload" href="style.css" as="style"/>
+	<link rel="preload" href="style.css" as="style" crossorigin="anonymous"/>
 	<link rel="preload" href="/fonts/Invention.woff2" as="font" type="font/woff2" crossorigin="anonymous"/>
-	<link rel="stylesheet" type="text/css" fetchpriority="high" href="style.css"/>
+	<link rel="stylesheet" type="text/css" fetchpriority="high" href="style.css" media="print" onload="this.media='all'"/>
 	<link rel="icon" href="favicon.ico"/>
-	<script type="text/javascript" async="true" src="gradient.js"></script>
+	<script type="text/javascript" src="gradient.js" async></script>
 	<!--<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
 	<link href="./fonts/Invention.woff2" rel="stylesheet"> -->
