--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="preload" href="/fonts/Invention.woff2" as="font" type="font/woff2" crossorigin="anonymous"/>
 	<link rel="stylesheet" type="text/css" fetchpriority="high" href="style.css" media="print" onload="this.media='all'"/>
 	<link rel="icon" href="favicon.ico"/>
-	<script type="text/javascript" src="gradient.js" async></script>
+	<script src="gradient.js"></script>
 	<!--<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
 	<link href="./fonts/Invention.woff2" rel="stylesheet"> -->
