--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<link rel="dns-prefetch" href="https://www.zerix.net/"/>
 	<link rel="preload" href="style.css" as="style" crossorigin="anonymous"/>
 	<link rel="preload" href="/fonts/Invention.woff2" as="font" type="font/woff2" crossorigin="anonymous"/>
-	<link rel="stylesheet" type="text/css" fetchpriority="high" href="style.css" media="print" onload="this.media='all'"/>
+	<link rel="stylesheet" type="text/css" fetchpriority="high" href="style.css"/>
 	<link rel="icon" href="favicon.ico"/>
-	<script src="gradient.js"></script>
+	<script src="gradient.js" async></script>
 	<!--<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
 	<link href="./fonts/Invention.woff2" rel="stylesheet"> -->
