--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="dns-prefetch" href="https://www.zerix.net/"/>
 	<link rel="preload" href="style.css" as="style" crossorigin="anonymous"/>
 	<link rel="preload" href="/fonts/Invention.woff2" as="font" type="font/woff2" crossorigin="anonymous"/>
+	<link rel="preload" as="image" href="favicon.ico">
 	<link rel="stylesheet" type="text/css" fetchpriority="high" href="style.css"/>
 	<link rel="icon" href="favicon.ico"/>
 	<script src="gradient.js" async></script>
