--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
 	<title>zerix dot net</title>
 	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"/>
 	<meta charset="UTF-8"/>
+	<meta property="og:site_name" content="zerix.net"/>
 	<!-- <meta content="text/html; charset=UTF-8" http-equiv="content-type" /> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<link rel="dns-prefetch" href="https://www.zerix.net/"/>
