--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 	<meta property="og:site_name" content="zerix.net"/>
 	<!-- <meta content="text/html; charset=UTF-8" http-equiv="content-type" /> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<meta name="description" content="zerix.net">
 	<link rel="dns-prefetch" href="https://www.zerix.net/"/>
 	<link rel="preload" href="style.css" as="style" crossorigin="anonymous"/>
 	<link rel="preload" href="/fonts/Invention.woff2" as="font" type="font/woff2" crossorigin="anonymous"/>
 	<link rel="preload" as="image" href="favicon.ico">
 	<link rel="stylesheet" type="text/css" fetchpriority="high" href="style.css"/>
 	<link rel="icon" href="favicon.ico"/>
-	<script src="gradient.js" async></script>
+	<script src="gradient.js" crossorigin="anonymous" async></script>
 	<!--<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
 	<link href="./fonts/Invention.woff2" rel="stylesheet"> -->
