--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<meta name="description" content="zerix.net">
 	<link rel="dns-prefetch" href="https://www.zerix.net/"/>
+	<link rel="preload" href="gradient.js" as="script"/>
 	<link rel="preload" href="/fonts/Invention.woff2" as="font" type="font/woff2" crossorigin="anonymous"/>	
 	<link rel="preload" href="style.css" as="style" crossorigin="anonymous"/>
 	<link rel="preload" as="image" href="favicon.ico">
